# honeymoon_itinerary

./: .gitignore  clean_data.R  flight_check.csv  flights.csv  full_prices.csv  full_prices_cleaned.csv  prices.csv  solve.R
app/: CMakeLists.txt
app/src/: csv_loader.cpp  csv_loader.h  itinerary_solver.cpp  itinerary_solver.h  main.cpp  types.h
app/src/panels/: gantt_panel.cpp  gantt_panel.h  map_panel.cpp  map_panel.h  table_panel.cpp  table_panel.h
